prueba en clase #2

--- a/nginx-app/app/templates/index.html
+++ b/nginx-app/app/templates/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Productos registrados</h1>
+        <h1 class="mb-4">Productos Ivan</h1>
         <a href="/crear.html" class="btn btn-primary mb-3">Crear Nuevo Producto</a>
         <table class="table">
             <thead class="thead-dark">
